Fixing save buttons alignment

--- a/app/assets/scss/_save-buttons-component.scss
+++ b/app/assets/scss/_save-buttons-component.scss
@@ -9,4 +9,8 @@
     margin: 0;
     box-sizing: border-box;
   }
+
+  a {
+    margin: 0;
+  }
 }
